Fixed spacing for the ta link button on the home page, the ta-help card, and fixed position of the login and cancel buttons.

--- a/styles/base.css
+++ b/styles/base.css
@@ -229,61 +229,69 @@ nav {
 /* Bordered form */
 form {
 	border: 3px solid var(--border-color);
-  }
+}
   
-  input[type=text], input[type=password] {
+input[type=text], input[type=password] {
 	width: 80%;
 	padding: 12px 20px;
 	margin: 0 auto;
 	display: inline-block;
 	border: 1px solid #ccc;
 	box-sizing: border-box;
-  }
+}
   
   /* Set a style for form buttons */
-  .login button, .formbtn {
+.login button, .formbtn {
 	background-color: var(--accent2-color);
 	color: var(--accent3-color);
 	padding: 1rem;
 	margin: 8px 0;
 	cursor: pointer;
-  }
+}
 
-  .login button {
+.login button {
 	background-color: var(--ham-color);
 	border: none;
 	margin: 0;
-  }
+}
   
   /* Extra style for the cancel button (red) */
-  .cancelbtn {
+.cancelbtn {
 	width: auto;
-	padding: 10px 18px;
+	margin-left: 2%;
 	background-color: var(--accent2-color);
-  }
+}
   
   /* Center the avatar image inside this container */
-  .imgcontainer {
+.imgcontainer {
 	text-align: center;
 	margin: 24px 0 12px 0;
-  }
+}
   
   /* Avatar image */
-  img.avatar {
+img.avatar {
 	width: 40%;
-  }
+}
   
   /* Add padding to containers */
-  .container {
+.container {
 	padding: 16px;
-  }
+}
+
+.container label b {
+	margin-right: 40%;
+}
+
+.container button {
+	text-align: center;
+}
   
   /* Change styles for span and cancel button on extra small screens */
-  @media screen and (max-width: 300px) {
+@media screen and (max-width: 300px) {
 	.cancelbtn {
 	  width: 100%;
 	}
-  }
+}
 
 /* The Modal (background) */
 .modal {
@@ -501,6 +509,10 @@ footer {
 	margin: 10px auto;
 	width: 90%;
     height: 500px;
+}
+
+.ta-class p{
+	text-align: left;
 }
 
 .ta-help {
