--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,3 +1,6 @@
 @media screen and (min-width: 1200px) {
-    
+    .ta .grid {
+        display: grid;
+        grid-template-rows: 160px 1fr;
+    }
 }
